--- a/config.json
+++ b/config.json
@@ -1,11 +1,9 @@
 {
     "creator": "https://wa.me/6281354043077",
     "access": [
-      "6281354043077",
-      "6281354043077"
+      "081354043077"
     ],
-    "access": [
-      "6281354043077",
-      "6281354043077"
+    "access_bot": [
+      "081354043077"
     ]
 }
